# 3d-cellular-automata

./: Cargo.toml  README.md  shell.nix
src/: instancing.rs  main.rs
