[package]
name = "bevy_3d_cellular_automata"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.8.1"
bytemuck = "1.7"
bevy_flycam = "0.8.1"
bevy_egui = "0.16.1"
rand = "0.8.1"
